more style fixes
- add minimum height to desktop play image container
- fix unwanted horizontal document scroll
- fix timeline extra margin

--- a/src/components/about/play/categories-slideshow.module.scss
+++ b/src/components/about/play/categories-slideshow.module.scss
@@ -62,6 +62,7 @@
 .image-container {
   position: relative;
   max-width: #{"min(66%, 750px)"};
+  min-height: 500px;
   flex-shrink: 0;
   flex: 1.5;
 }
