--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -7,6 +7,7 @@
   background: design-system.$bg;
   overflow-x: hidden;
   width: 100vw;
+  max-width: 100%;
   box-sizing: border-box;
 
   --page-margin: #{"min(150px, 12vw)"};
